--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -1,5 +1,21 @@
 {
     "ratings": "Рейтинг",
     "market": "Маркет",
-    "settings": "Настройки"
+    "settings": "Настройки",
+    "cryptoassets": "Криптоактивы",
+    "exchanges": "Биржи",
+    "sectors": "Секторы",
+    "active_coins": "Активные монеты",
+    "markets": "Рынки",
+    "fiat_currency": "Фиатная валюта",
+    "switch_to_day_mode": "Сменить на Дневную тему",
+    "switch_to_night_mode": "Сменить на Ночную тему",
+    "language": "Язык",
+    "market_cap": "Рын.кап",
+    "buy_crypto": "Купить крипту",
+    "english": "Английский",
+    "russian": "Русский",
+    "top_five_coins": "Топ 5 Монет",
+    "no_internet_connection": "Отсутствует интернет соединение, пожалуйста, проверьте соединение и попробуйте еще раз."
+
 }
