--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -1,21 +1,21 @@
 {
-    "ratings": "Рейтинг",
-    "market": "Маркет",
-    "settings": "Настройки",
-    "cryptoassets": "Криптоактивы",
-    "exchanges": "Биржи",
-    "sectors": "Секторы",
     "active_coins": "Активные монеты",
-    "markets": "Рынки",
+    "buy_crypto": "Купить крипту",
+    "cryptoassets": "Криптоактивы",
+    "english": "Английский",
+    "exchanges": "Биржи",
     "fiat_currency": "Фиатная валюта",
-    "switch_to_day_mode": "Сменить на Дневную тему",
-    "switch_to_night_mode": "Сменить на Ночную тему",
     "language": "Язык",
     "market_cap": "Рын.кап",
-    "buy_crypto": "Купить крипту",
-    "english": "Английский",
+    "market": "Маркет",
+    "markets": "Рынки",
+    "no_internet_connection": "Отсутствует интернет соединение, пожалуйста, проверьте соединение и попробуйте еще раз.",
+    "ratings": "Рейтинг",
     "russian": "Русский",
+    "sectors": "Секторы",
+    "settings": "Настройки",
+    "switch_to_day_mode": "Сменить на Дневную тему",
+    "switch_to_night_mode": "Сменить на Ночную тему",
     "top_five_coins": "Топ 5 Монет",
-    "no_internet_connection": "Отсутствует интернет соединение, пожалуйста, проверьте соединение и попробуйте еще раз."
-
+    "day": "д"
 }
