--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,20 +1,21 @@
 {
-    "ratings": "Ratings",
-    "market": "Market",
-    "settings": "Settings",
-    "cryptoassets": "Cryptoassets",
-    "exchanges": "Exchanges",
-    "sectors": "Sectors",
     "active_coins": "Active Coins",
-    "markets": "Markets",
+    "buy_crypto": "Buy Crypto",
+    "cryptoassets": "Cryptoassets",
+    "english": "English",
+    "exchanges": "Exchanges",
     "fiat_currency": "Fiat currency",
-    "switch_to_day_mode": "Switch to Day Mode",
-    "switch_to_night_mode": "Switch to Night Mode",
     "language": "Language",
     "market_cap": "MCap",
-    "buy_crypto": "Buy Crypto",
-    "english": "English",
+    "market": "Market",
+    "markets": "Markets",
+    "no_internet_connection": "No internet connection, please check it and try it again.",
+    "ratings": "Ratings",
     "russian": "Russian",
+    "sectors": "Sectors",
+    "settings": "Settings",
+    "switch_to_day_mode": "Switch to Day Mode",
+    "switch_to_night_mode": "Switch to Night Mode",
     "top_five_coins": "Top 5 Coins",
-    "no_internet_connection": "No internet connection, please check it and try it again."
+    "day": "d"
 }
