Initial project changes and Search NavBar tab.

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -11,6 +11,7 @@
     "markets": "Markets",
     "no_internet_connection": "No internet connection, please check it and try it again.",
     "ratings": "Ratings",
+    "search": "Search",
     "russian": "Russian",
     "sectors": "Sectors",
     "settings": "Settings",
