--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -11,6 +11,7 @@
     "markets": "Рынки",
     "no_internet_connection": "Отсутствует интернет соединение, пожалуйста, проверьте соединение и попробуйте еще раз.",
     "ratings": "Рейтинг",
+    "search": "Поиск",
     "russian": "Русский",
     "sectors": "Секторы",
     "settings": "Настройки",
