--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -18,5 +18,6 @@
     "switch_to_day_mode": "Switch to Day Mode",
     "switch_to_night_mode": "Switch to Night Mode",
     "top_five_coins": "Top 5 Coins",
-    "day": "d"
+    "day": "d",
+    "top_seven_coins": "Top 7 Trending Coins"
 }
