Search page done.

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -19,5 +19,6 @@
     "switch_to_night_mode": "Switch to Night Mode",
     "top_five_coins": "Top 5 Coins",
     "day": "d",
-    "top_seven_coins": "Top 7 Trending Coins"
+    "top_seven_coins": "Top 7 Trending Coins",
+    "search_result_for": "Search results for "
 }
