--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -19,5 +19,6 @@
     "switch_to_night_mode": "Сменить на Ночную тему",
     "top_five_coins": "Топ 5 Монет",
     "day": "д",
-    "top_seven_coins": "Топ 7 Монет"
+    "top_seven_coins": "Топ 7 Монет",
+    "search_result_for": "Результат поиска по "
 }
