implementing clean architecture, search page, search result, route to coin

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -11,6 +11,8 @@
     "markets": "Markets",
     "no_internet_connection": "No internet connection, please check it and try it again.",
     "ratings": "Ratings",
+    "search": "Search",
+    "trending": "Top 7 Trending Coins",
     "russian": "Russian",
     "sectors": "Sectors",
     "settings": "Settings",
