--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -22,5 +22,6 @@
     "search_results_for": "Результаты за запросом",
     "top7": "Топ 7 Трендовых Монет",
     "failed_to_load": "Не удалось загрузить данные",
-    "no_coins_available": "Монеты не найдены"
+    "no_coins_available": "Монеты не найдены",
+    "no_trending_coins_found": "Не найдено трендовых монет за заданым запросом"
 }
