✨ feat(Added Ukranian localization): Localization

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -17,5 +17,6 @@
     "switch_to_day_mode": "Switch to Day Mode",
     "switch_to_night_mode": "Switch to Night Mode",
     "top_five_coins": "Top 5 Coins",
-    "day": "d"
+    "day": "d",
+    "ukranian": "Ukranian"
 }
