--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -17,5 +17,6 @@
     "switch_to_day_mode": "Сменить на Дневную тему",
     "switch_to_night_mode": "Сменить на Ночную тему",
     "top_five_coins": "Топ 5 Монет",
-    "day": "д"
+    "day": "д",
+    "ukranian": "украинский"
 }
