--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -18,5 +18,5 @@
     "switch_to_night_mode": "Сменить на Ночную тему",
     "top_five_coins": "Топ 5 Монет",
     "day": "д",
-    "ukranian": "украинский"
+    "ukranian": "Украинский"
 }
